web/components/HighlightedSpeakerBlock/HighlightedSpeakerBlock.module.css
.container {
  overflow: hidden;
}

.column {
  display: none;
}

.imageColumn {
  display: grid;
  grid-template-columns: repeat(3, 192px);
  gap: 12px;
  justify-content: center;
}

.image {
  width: 192px;
  height: 255px;
  border-radius: 16px;
}

@media (--medium-up) {
  .image {
    width: 280px;
    height: 372px;
  }

  .imageColumn {
    grid-template-columns: repeat(3, 280px);
  }
}

@media (--large-up) {
  .container {
    display: grid;
    grid-template-columns: repeat(2, 336px);
    gap: 21px;
    justify-content: end;
    height: 804px;
  }

  .column,
  .imageColumn {
    display: flex;
    flex-direction: column;
    width: 336px;
    gap: 21px;
  }

  .column {
    margin-top: -205px;
  }

  .imageColumn {
    margin-top: -168px;
  }

  .image {
    width: 336px;
    height: 480px;
  }
}

